# sentinel

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: BENCHMARK.md
screenshots/: _capture.sh
scripts/: build_bench50.py  fetch_benign.py  sentinelnet_bootstrap.py
sentinel/: __main__.py  benchmark.py  cli.py  config.py  daemon.py  fetch_malware.py  ghidra_headless.py  hashing.py  models.py  report.py  scanner.py  sentinelnet.py  static_inspect.py  verdict.py
sentinel/llm/: base.py  claude_cli.py
sentinel/stages/: ai_review.py  triage.py  virustotal.py
ui/: .gitignore  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.web.json
ui/src/main/: daemon.ts  index.ts
ui/src/preload/: index.ts
ui/src/renderer/: index.html
ui/src/renderer/src/: App.tsx
ui/src/renderer/src/components/: AnalysisCard.tsx  BigScanIndicator.tsx  CodeReviewCard.tsx  DropZone.tsx  HistoryPage.tsx  HistorySidebar.tsx  OverviewPage.tsx  RelatedSamplesCard.tsx  ScanInProgress.tsx  ScoreGauge.tsx  SentinelWordmark.tsx  SettingsPage.tsx  ShieldGlyph.tsx  ShieldHero.tsx  Sidebar.tsx  SignalCard.tsx  StageIndicator.tsx  StatCard.tsx  VerdictScreen.tsx
ui/src/renderer/src/lib/: api.ts  format.ts  types.ts  useScan.ts
ui/src/renderer/src/styles/: globals.css
